--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
   "dependencies": {
-    "@discordjs/voice": "^0.15.0",
-    "@types/node": "^18.15.6",
+    "@discordjs/voice": "^0.16.0",
+    "@types/node": "^18.16.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "bufferutil": "^4.0.7",
     "chalk": "^5.2.0",
-    "discord.js": "^14.8.0",
+    "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
     "erlpack": "github:discord/erlpack",
+    "node-gyp": "^9.3.1",
+    "typescript": "^5.0.4",
     "utf-8-validate": "^6.0.3",
     "zlib-sync": "^0.1.8"
-  }
+  },
+  "devDependencies": {
+    "eslint": "^8.39.0"
+  },
+  "scripts": {
+    "lint": "eslint . --cache --fix --ext .mts"
+  },
+  "type": "module"
 }
